fixed the clue giver

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -315,18 +315,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-32-73025d733618>, line 77)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-32-73025d733618>\"\u001b[1;36m, line \u001b[1;32m77\u001b[0m\n\u001b[1;33m    if j < len(top_team_idxs[0])\u001b[0m\n\u001b[1;37m                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class spyMaster(spyPlayer):\n",
     "\n",
@@ -357,7 +348,7 @@
     "        \"\"\"Creates a clue based off the state of the gameboard [word_grid]\n",
     "        word_grid: dictionary containing the \"identity of each word\"\n",
     "        \"\"\"\n",
-    "        n = 1000   # num similar words you care about\n",
+    "        n = 10   # num similar words you care about\n",
     "        clue = \"\"\n",
     "        clue_num = 0\n",
     "\n",
@@ -368,6 +359,9 @@
     "        opp_indexs = [self.codeword_to_idx.get(x) for x in opp_words]\n",
     "        civ_indexs = [self.codeword_to_idx.get(x) for x in civ_words]\n",
     "        boom_index = [self.codeword_to_idx.get(x) for x in boom_word]\n",
+    "        \n",
+    "#         print('team_indexs')\n",
+    "#         print(team_indexs)\n",
     "\n",
     "        top_team_idxs = []\n",
     "        top_opp_idxs = []\n",
@@ -393,10 +387,20 @@
     "                top_civ_idxs.append(sorted[:n])\n",
     "\n",
     "        counts = np.zeros([n,n])\n",
+    "#         team_similar = []\n",
     "        \n",
+    "#         for i in range(8):\n",
+    "#             print(top_team_idxs[i])\n",
+    "#             team_similar.append([self.idx_to_bankword[x] for x in top_team_idxs[i]])\n",
+    "#             print(team_similar[i])\n",
+    "        \n",
+    "        print(\"team\")\n",
     "        print(team_words)\n",
+    "        print(\"opp\")\n",
     "        print(opp_words)\n",
+    "        print(\"civ\")\n",
     "        print(civ_words)\n",
+    "        print(\"boom\")\n",
     "        print(boom_word)\n",
     "\n",
     "        for i in range(len(top_team_idxs)):\n",
@@ -404,20 +408,29 @@
     "                for j in range(n):\n",
     "                    # if top_team_idxs[i][j] in top_boom_idxs:\n",
     "                    # \tcontinue\n",
-    "                    if j < len(top_team_idxs[0])\n",
-    "                    for k in range(n):\n",
-    "                        if k < len(top_team_idxs) and top_team_idxs[i][j] in top_team_idxs[k]:\n",
-    "                            counts[i][j]+=1\n",
-    "                        if k < len(top_opp_idxs) and top_team_idxs[i][j] in top_opp_idxs[k]:\n",
-    "                            counts[i][j]-=1\n",
-    "                        if k < len(top_civ_idxs) and top_team_idxs[i][j] in top_civ_idxs[k]:\n",
-    "                            counts[i][j]-=0.5\n",
+    "                    if j < len(top_team_idxs[0]):\n",
+    "                        for k in range(n):\n",
+    "                            if k < len(top_team_idxs) and top_team_idxs[i][j] in top_team_idxs[k]:\n",
+    "                                counts[i][j]+=1\n",
+    "#                             if k < len(top_opp_idxs) and top_team_idxs[i][j] in top_opp_idxs[k]:\n",
+    "#                                 counts[i][j]-=1\n",
+    "#                             if k < len(top_civ_idxs) and top_team_idxs[i][j] in top_civ_idxs[k]:\n",
+    "#                                 counts[i][j]-=0.5\n",
     "        # top indices for each word in team words\n",
     "        cts_idx = [np.argmax(z) for z in counts]\n",
     "        top_cts = [counts[i][cts_idx[i]] for i in range(len(cts_idx))]\n",
     "        i = np.argmax(top_cts)\n",
     "        j = cts_idx[i]\n",
-    "        clue = self.idx_to_bankword[j]\n",
+    "\n",
+    "        ii = [team_indexs[i]][0]\n",
+    "        jj = [top_team_idxs[i][j]][0]\n",
+    "\n",
+    "#         print(counts[i][j])\n",
+    "        clue = self.idx_to_bankword[jj]\n",
+    "        clue_num = counts[i][j]\n",
+    "        \n",
+    "#         for i in range(n):\n",
+    "#             print(counts[i])\n",
     "\n",
     "        #Rocchio away the synonyms of the opp_words, civ_words, and boom_word\n",
     "\n",
@@ -426,54 +439,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Bottle', 'Agent', 'Czech', 'Date', 'Chair', 'Drop', 'King', 'Dragon', 'Hole', 'Cast', 'Pirate', 'Life', 'Seal', 'Rose', 'Parachute', 'Spine', 'Revolution', 'Worm', 'Chocolate', 'Nut', 'Novel', 'Kiwi', 'Trip', 'Scientist', 'Chick']\n",
-      "{'Pirate': 0, 'Drop': 1, 'Seal': 0, 'Bottle': 0, 'Scientist': 1, 'Spine': 0, 'Dragon': 2, 'Chair': 2, 'Cast': 0, 'Czech': 1, 'Life': 2, 'Agent': 0, 'Novel': 1, 'Trip': 2, 'Revolution': 2, 'Date': 0, 'King': 2, 'Rose': 1, 'Chocolate': 0, 'Hole': 1, 'Nut': 1, 'Worm': 3, 'Chick': 0, 'Parachute': 2, 'Kiwi': 1}\n",
-      "['drop', 'scientist', 'czech', 'novel', 'rose', 'hole', 'nut', 'kiwi']\n",
-      "['pirate', 'seal', 'bottle', 'spine', 'cast', 'agent', 'date', 'chocolate', 'chick']\n",
-      "['dragon', 'chair', 'life', 'trip', 'revolution', 'king', 'parachute']\n",
-      "worm\n",
-      "('actinomorphic', 0)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'spyMaster' object has no attribute 'idx_to_wordbank'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-36-f8162a694a7d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mclue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmaster\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreateClue\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mword_list\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mword_grid\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmaster\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0midx_to_wordbank\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'spyMaster' object has no attribute 'idx_to_wordbank'"
+      "team\n",
+      "['himalayas', 'casino', 'pit', 'theater', 'revolution', 'beijing', 'board', 'suit']\n",
+      "opp\n",
+      "['bond', 'tablet', 'czech', 'trip', 'bark', 'hotel', 'hook', 'loch ness', 'bank']\n",
+      "civ\n",
+      "['arm', 'tokyo', 'gas', 'dog', 'telescope', 'cross', 'hawk']\n",
+      "boom\n",
+      "slip\n",
+      "('architecture', 2.0)\n"
      ]
     }
    ],
    "source": [
     "getWords()\n",
     "createWordGrid()\n",
-    "print(word_list)\n",
-    "print(word_grid)\n",
+    "# print(word_list)\n",
+    "# print(word_grid)\n",
     "# print(type(word_grid))\n",
     "master = spyMaster(1)\n",
     "clue = master.createClue(word_list,word_grid)\n",
-    "print(clue)\n",
-    "print(master.idx_to_wordbank)"
+    "print(clue)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
