--- a/test.ipynb
+++ b/test.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
     "        \"\"\"Creates a clue based off the state of the gameboard [word_grid]\n",
     "        word_grid: dictionary containing the \"identity of each word\"\n",
     "        \"\"\"\n",
-    "        n = 10   # num similar words you care about\n",
+    "        n = 200   # num similar words you care about\n",
     "        clue = \"\"\n",
     "        clue_num = 0\n",
     "\n",
@@ -367,7 +367,7 @@
     "        top_opp_idxs = []\n",
     "        top_civ_idxs = []\n",
     "        sorted = self.sim_matrix[boom_index].argsort()[::-1][:]\n",
-    "        top_boom_idxs = sorted[:n]\n",
+    "        top_boom_idxs = sorted[:10]\n",
     "\n",
     "        # ind_max = max(len(team_indexs),len(opp_indexs),len(civ_indexs),len(boom_index))\n",
     "    \n",
@@ -406,16 +406,17 @@
     "        for i in range(len(top_team_idxs)):\n",
     "            if i < len(top_team_idxs):\n",
     "                for j in range(n):\n",
-    "                    # if top_team_idxs[i][j] in top_boom_idxs:\n",
-    "                    # \tcontinue\n",
     "                    if j < len(top_team_idxs[0]):\n",
-    "                        for k in range(n):\n",
-    "                            if k < len(top_team_idxs) and top_team_idxs[i][j] in top_team_idxs[k]:\n",
-    "                                counts[i][j]+=1\n",
-    "#                             if k < len(top_opp_idxs) and top_team_idxs[i][j] in top_opp_idxs[k]:\n",
-    "#                                 counts[i][j]-=1\n",
-    "#                             if k < len(top_civ_idxs) and top_team_idxs[i][j] in top_civ_idxs[k]:\n",
-    "#                                 counts[i][j]-=0.5\n",
+    "                        for k in range(len(top_team_idxs)):\n",
+    "                            if k < len(top_team_idxs):\n",
+    "                                if top_team_idxs[i][j] in top_team_idxs[k]:\n",
+    "                                    counts[i][j]+=1\n",
+    "                            if k < len(top_opp_idxs):\n",
+    "                                if top_team_idxs[i][j] in top_opp_idxs[k]:\n",
+    "                                    counts[i][j]-=0.8\n",
+    "                            if k < len(top_civ_idxs):\n",
+    "                                if top_team_idxs[i][j] in top_civ_idxs[k]:\n",
+    "                                     counts[i][j]-=0.3\n",
     "        # top indices for each word in team words\n",
     "        cts_idx = [np.argmax(z) for z in counts]\n",
     "        top_cts = [counts[i][cts_idx[i]] for i in range(len(cts_idx))]\n",
@@ -427,7 +428,7 @@
     "\n",
     "#         print(counts[i][j])\n",
     "        clue = self.idx_to_bankword[jj]\n",
-    "        clue_num = counts[i][j]\n",
+    "        clue_num = np.floor(counts[i][j])\n",
     "        \n",
     "#         for i in range(n):\n",
     "#             print(counts[i])\n",
@@ -439,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -447,14 +448,14 @@
      "output_type": "stream",
      "text": [
       "team\n",
-      "['himalayas', 'casino', 'pit', 'theater', 'revolution', 'beijing', 'board', 'suit']\n",
+      "['hand', 'australia', 'cell', 'fly', 'wind', 'court', 'ray', 'green']\n",
       "opp\n",
-      "['bond', 'tablet', 'czech', 'trip', 'bark', 'hotel', 'hook', 'loch ness', 'bank']\n",
+      "['pilot', 'table', 'limousine', 'mint', 'engine', 'vet', 'bill', 'log', 'kiwi']\n",
       "civ\n",
-      "['arm', 'tokyo', 'gas', 'dog', 'telescope', 'cross', 'hawk']\n",
+      "['yard', 'bat', 'shoe', 'foot', 'flute', 'death', 'model']\n",
       "boom\n",
-      "slip\n",
-      "('architecture', 2.0)\n"
+      "march\n",
+      "('ass', 3.0)\n"
      ]
     }
    ],
